cubemx: setup GPIOs and low speed ADCs

--- a/sonar_nucleo.ioc
+++ b/sonar_nucleo.ioc
@@ -1,4 +1,25 @@
 #MicroXplorer Configuration settings - do not modify
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.CommonPathInternal=null|null|null|null
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,CommonPathInternal
+ADC1.NbrOfConversionFlag=1
+ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.master=1
+ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC2.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_11
+ADC2.CommonPathInternal=null|null|null|null
+ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,Overrun,NbrOfConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,CommonPathInternal
+ADC2.NbrOfConversion=2
+ADC2.NbrOfConversionFlag=1
+ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.Overrun=ADC_OVR_DATA_OVERWRITTEN
+ADC2.Rank-1\#ChannelRegularConversion=1
+ADC2.Rank-4\#ChannelRegularConversion=2
+ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_92CYCLES_5
+ADC2.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_92CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
@@ -9,33 +30,50 @@ LPUART1.BaudRate=500000
 LPUART1.IPParameters=BaudRate
 Mcu.CPN=STM32G474RET6
 Mcu.Family=STM32G4
-Mcu.IP0=LPUART1
-Mcu.IP1=NVIC
-Mcu.IP2=RCC
-Mcu.IP3=SYS
-Mcu.IPNb=4
+Mcu.IP0=ADC1
+Mcu.IP1=ADC2
+Mcu.IP2=DAC3
+Mcu.IP3=LPUART1
+Mcu.IP4=NVIC
+Mcu.IP5=OPAMP6
+Mcu.IP6=RCC
+Mcu.IP7=SYS
+Mcu.IPNb=8
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PA2
-Mcu.Pin1=PA3
-Mcu.Pin2=PA5
-Mcu.Pin3=PA13
-Mcu.Pin4=PA14
-Mcu.Pin5=PB6
-Mcu.Pin6=VP_SYS_VS_Systick
-Mcu.Pin7=VP_SYS_VS_DBSignals
-Mcu.PinsNb=8
+Mcu.Pin0=PC0
+Mcu.Pin1=PC1
+Mcu.Pin10=PB11
+Mcu.Pin11=PA13
+Mcu.Pin12=PA14
+Mcu.Pin13=PC10
+Mcu.Pin14=PC11
+Mcu.Pin15=PB6
+Mcu.Pin16=VP_DAC3_VS_DACI1
+Mcu.Pin17=VP_SYS_V_VREFBUF
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_SYS_VS_DBSignals
+Mcu.Pin2=PC2
+Mcu.Pin3=PA0
+Mcu.Pin4=PA1
+Mcu.Pin5=PA2
+Mcu.Pin6=PA3
+Mcu.Pin7=PA5
+Mcu.Pin8=PA6
+Mcu.Pin9=PC5
+Mcu.PinsNb=20
 Mcu.ThirdParty0=QuantumLeaps.qpc.7.3.4
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
 Mcu.UserName=STM32G474RETx
 MxCube.Version=6.13.0
 MxDb.Version=DB.6.0.130
+NVIC.ADC1_2_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.LPUART1_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
+NVIC.LPUART1_IRQn=true\:5\:0\:true\:false\:true\:true\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
@@ -43,6 +81,14 @@ NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0.GPIOParameters=GPIO_Label
+PA0.GPIO_Label=XDCR_RX
+PA0.Mode=IN1-Single-Ended
+PA0.Signal=ADC1_IN1
+PA1.GPIOParameters=GPIO_Label
+PA1.GPIO_Label=XDCR_RX_AC
+PA1.Mode=PGA Connected-DAC_OUT2-INP
+PA1.Signal=OPAMP6_VINM0
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -57,10 +103,42 @@ PA5.GPIOParameters=GPIO_Label
 PA5.GPIO_Label=FW_LED
 PA5.Locked=true
 PA5.Signal=GPIO_Output
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=XDCR_PWR_SENSE
+PA6.Mode=IN3-Single-Ended
+PA6.Signal=ADC2_IN3
+PB11.GPIOParameters=GPIO_Label
+PB11.GPIO_Label=XRDC_RX_AMP
+PB11.Mode=PGA Connected-DAC_OUT2-INP
+PB11.Signal=OPAMP6_VOUT
 PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=DEBUG_GPIO
 PB6.Locked=true
 PB6.Signal=GPIO_Output
+PC0.GPIOParameters=GPIO_Label
+PC0.GPIO_Label=GainSel0
+PC0.Locked=true
+PC0.Signal=GPIO_Output
+PC1.GPIOParameters=GPIO_Label
+PC1.GPIO_Label=GainSel1
+PC1.Locked=true
+PC1.Signal=GPIO_Output
+PC10.GPIOParameters=GPIO_Label
+PC10.GPIO_Label=FW_LED
+PC10.Locked=true
+PC10.Signal=GPIO_Output
+PC11.GPIOParameters=GPIO_Label
+PC11.GPIO_Label=XDCR_PWR_EN
+PC11.Locked=true
+PC11.Signal=GPIO_Output
+PC2.GPIOParameters=GPIO_Label
+PC2.GPIO_Label=GainSel2
+PC2.Locked=true
+PC2.Signal=GPIO_Output
+PC5.GPIOParameters=GPIO_Label
+PC5.GPIO_Label=WATER_TEMP
+PC5.Mode=IN11-Single-Ended
+PC5.Signal=ADC2_IN11
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -92,7 +170,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_TIM8_Init-TIM8-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_DAC3_Init-DAC3-false-HAL-true,7-MX_OPAMP6_Init-OPAMP6-false-HAL-true
 QuantumLeaps.qpc.7.3.4.RTEFJjqpc_Checked=false
 QuantumLeaps.qpc.7.3.4_SwParameter=qpcCcRTEFJjRealAaTimeOoKernel\:qk;qpcCcRTEFJjEventOoProcessor\:qep;qpcCcRTEFJjFramework\:qf;
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
@@ -146,8 +224,12 @@ RCC.USART3Freq_Value=168000000
 RCC.USBFreq_Value=168000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=336000000
+VP_DAC3_VS_DACI1.Mode=DAC_OUT1_Int
+VP_DAC3_VS_DACI1.Signal=DAC3_VS_DACI1
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
 VP_SYS_VS_DBSignals.Signal=SYS_VS_DBSignals
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_V_VREFBUF.Mode=ExternalMode
+VP_SYS_V_VREFBUF.Signal=SYS_V_VREFBUF
 board=custom
