--- a/sonar_nucleo.ioc
+++ b/sonar_nucleo.ioc
@@ -10,7 +10,8 @@ ADC1.master=1
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC2.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_11
 ADC2.CommonPathInternal=null|null|null|null
-ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,Overrun,NbrOfConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,CommonPathInternal
+ADC2.DMAContinuousRequests=ENABLE
+ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,Overrun,NbrOfConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,DMAContinuousRequests,CommonPathInternal
 ADC2.NbrOfConversion=2
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
@@ -23,6 +24,25 @@ ADC2.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_92CYCLES_5
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+Dma.ADC2.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC2.0.EventEnable=DISABLE
+Dma.ADC2.0.Instance=DMA1_Channel1
+Dma.ADC2.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC2.0.MemInc=DMA_MINC_ENABLE
+Dma.ADC2.0.Mode=DMA_NORMAL
+Dma.ADC2.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC2.0.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC2.0.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.ADC2.0.Priority=DMA_PRIORITY_LOW
+Dma.ADC2.0.RequestNumber=1
+Dma.ADC2.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.ADC2.0.SignalID=NONE
+Dma.ADC2.0.SyncEnable=DISABLE
+Dma.ADC2.0.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.ADC2.0.SyncRequestNumber=1
+Dma.ADC2.0.SyncSignalID=NONE
+Dma.Request0=ADC2
+Dma.RequestsNb=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -33,12 +53,13 @@ Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
 Mcu.IP2=DAC3
-Mcu.IP3=LPUART1
-Mcu.IP4=NVIC
-Mcu.IP5=OPAMP6
-Mcu.IP6=RCC
-Mcu.IP7=SYS
-Mcu.IPNb=8
+Mcu.IP3=DMA
+Mcu.IP4=LPUART1
+Mcu.IP5=NVIC
+Mcu.IP6=OPAMP6
+Mcu.IP7=RCC
+Mcu.IP8=SYS
+Mcu.IPNb=9
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
@@ -71,7 +92,7 @@ MxDb.Version=DB.6.0.130
 NVIC.ADC1_2_IRQn=true\:6\:0\:true\:false\:true\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.ForceEnableDMAVector=true
+NVIC.ForceEnableDMAVector=false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.LPUART1_IRQn=true\:5\:0\:true\:false\:true\:true\:false\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -170,7 +191,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_DAC3_Init-DAC3-false-HAL-true,7-MX_OPAMP6_Init-OPAMP6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_ADC2_Init-ADC2-false-HAL-true,7-MX_DAC3_Init-DAC3-false-HAL-true,8-MX_OPAMP6_Init-OPAMP6-false-HAL-true
 QuantumLeaps.qpc.7.3.4.RTEFJjqpc_Checked=false
 QuantumLeaps.qpc.7.3.4_SwParameter=qpcCcRTEFJjRealAaTimeOoKernel\:qk;qpcCcRTEFJjEventOoProcessor\:qep;qpcCcRTEFJjFramework\:qf;
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
