--- a/sonar_nucleo.ioc
+++ b/sonar_nucleo.ioc
@@ -10,8 +10,10 @@ ADC1.master=1
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC2.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_11
 ADC2.CommonPathInternal=null|null|null|null
+ADC2.ContinuousConvMode=ENABLE
 ADC2.DMAContinuousRequests=ENABLE
-ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,Overrun,NbrOfConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,DMAContinuousRequests,CommonPathInternal
+ADC2.EOCSelection=ADC_EOC_SEQ_CONV
+ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,Overrun,NbrOfConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,DMAContinuousRequests,ContinuousConvMode,EOCSelection,CommonPathInternal
 ADC2.NbrOfConversion=2
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
