--- a/sonar_nucleo.ioc
+++ b/sonar_nucleo.ioc
@@ -10,7 +10,7 @@ ADC1.master=1
 ADC2.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_3
 ADC2.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_11
 ADC2.CommonPathInternal=null|null|null|null
-ADC2.ContinuousConvMode=ENABLE
+ADC2.ContinuousConvMode=DISABLE
 ADC2.DMAContinuousRequests=ENABLE
 ADC2.EOCSelection=ADC_EOC_SEQ_CONV
 ADC2.IPParameters=Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversionFlag,Overrun,NbrOfConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,DMAContinuousRequests,ContinuousConvMode,EOCSelection,CommonPathInternal
@@ -18,7 +18,7 @@ ADC2.NbrOfConversion=2
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.Overrun=ADC_OVR_DATA_OVERWRITTEN
+ADC2.Overrun=ADC_OVR_DATA_PRESERVED
 ADC2.Rank-1\#ChannelRegularConversion=1
 ADC2.Rank-4\#ChannelRegularConversion=2
 ADC2.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_92CYCLES_5
@@ -54,6 +54,7 @@ Mcu.CPN=STM32G474RET6
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
+Mcu.IP10=TIM8
 Mcu.IP2=DAC3
 Mcu.IP3=DMA
 Mcu.IP4=LPUART1
@@ -61,22 +62,32 @@ Mcu.IP5=NVIC
 Mcu.IP6=OPAMP6
 Mcu.IP7=RCC
 Mcu.IP8=SYS
-Mcu.IPNb=9
+Mcu.IP9=TIM3
+Mcu.IPNb=11
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
 Mcu.Pin1=PC1
 Mcu.Pin10=PB11
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=PC10
-Mcu.Pin14=PC11
-Mcu.Pin15=PB6
-Mcu.Pin16=VP_DAC3_VS_DACI1
-Mcu.Pin17=VP_SYS_V_VREFBUF
-Mcu.Pin18=VP_SYS_VS_Systick
-Mcu.Pin19=VP_SYS_VS_DBSignals
+Mcu.Pin11=PC8
+Mcu.Pin12=PC9
+Mcu.Pin13=PA13
+Mcu.Pin14=PA14
+Mcu.Pin15=PC10
+Mcu.Pin16=PC11
+Mcu.Pin17=PB6
+Mcu.Pin18=VP_DAC3_VS_DACI1
+Mcu.Pin19=VP_SYS_V_VREFBUF
 Mcu.Pin2=PC2
+Mcu.Pin20=VP_SYS_VS_Systick
+Mcu.Pin21=VP_SYS_VS_DBSignals
+Mcu.Pin22=VP_TIM3_VS_ControllerModeCombinedResetTrigger
+Mcu.Pin23=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin24=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin25=VP_TIM3_VS_OPM
+Mcu.Pin26=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin27=VP_TIM8_VS_no_output1
+Mcu.Pin28=VP_TIM8_VS_OPM
 Mcu.Pin3=PA0
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
@@ -84,7 +95,7 @@ Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PC5
-Mcu.PinsNb=20
+Mcu.PinsNb=29
 Mcu.ThirdParty0=QuantumLeaps.qpc.7.3.4
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -147,7 +158,7 @@ PC1.GPIO_Label=GainSel1
 PC1.Locked=true
 PC1.Signal=GPIO_Output
 PC10.GPIOParameters=GPIO_Label
-PC10.GPIO_Label=FW_LED
+PC10.GPIO_Label=FW_LED_2
 PC10.Locked=true
 PC10.Signal=GPIO_Output
 PC11.GPIOParameters=GPIO_Label
@@ -162,6 +173,14 @@ PC5.GPIOParameters=GPIO_Label
 PC5.GPIO_Label=WATER_TEMP
 PC5.Mode=IN11-Single-Ended
 PC5.Signal=ADC2_IN11
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=PWM_B
+PC8.Locked=true
+PC8.Signal=S_TIM3_CH3
+PC9.GPIOParameters=GPIO_Label
+PC9.GPIO_Label=PWM_A
+PC9.Locked=true
+PC9.Signal=S_TIM8_CH4
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -247,6 +266,27 @@ RCC.USART3Freq_Value=168000000
 RCC.USBFreq_Value=168000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=336000000
+SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
+SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
+SH.S_TIM8_CH4.ConfNb=1
+TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
+TIM3.IPParameters=Channel-PWM Generation3 CH3,Prescaler,PeriodNoDither,OCMode_PWM-PWM Generation3 CH3,PulseNoDither_3
+TIM3.OCMode_PWM-PWM\ Generation3\ CH3=TIM_OCMODE_PWM2
+TIM3.PeriodNoDither=19
+TIM3.Prescaler=108
+TIM3.PulseNoDither_3=11
+TIM8.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
+TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
+TIM8.IPParameters=Prescaler,RepetitionCounter,Channel-PWM Generation4 CH4,PulseNoDither_4,OCMode_PWM-PWM Generation4 CH4,Channel-PWM Generation1 No Output,OCMode_PWM-PWM Generation1 No Output,PulseNoDither_1,TIM_MasterOutputTrigger,PeriodNoDither
+TIM8.OCMode_PWM-PWM\ Generation1\ No\ Output=TIM_OCMODE_PWM2
+TIM8.OCMode_PWM-PWM\ Generation4\ CH4=TIM_OCMODE_PWM2
+TIM8.PeriodNoDither=19
+TIM8.Prescaler=108
+TIM8.PulseNoDither_1=10
+TIM8.PulseNoDither_4=11
+TIM8.RepetitionCounter=20
+TIM8.TIM_MasterOutputTrigger=TIM_TRGO_OC1REF
 VP_DAC3_VS_DACI1.Mode=DAC_OUT1_Int
 VP_DAC3_VS_DACI1.Signal=DAC3_VS_DACI1
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
@@ -255,4 +295,18 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_SYS_V_VREFBUF.Mode=ExternalMode
 VP_SYS_V_VREFBUF.Signal=SYS_V_VREFBUF
+VP_TIM3_VS_ClockSourceINT.Mode=Internal
+VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM3_VS_ClockSourceITR.Mode=TriggerSource_ITR5
+VP_TIM3_VS_ClockSourceITR.Signal=TIM3_VS_ClockSourceITR
+VP_TIM3_VS_ControllerModeCombinedResetTrigger.Mode=Combined_Reset_Trigger_Mode
+VP_TIM3_VS_ControllerModeCombinedResetTrigger.Signal=TIM3_VS_ControllerModeCombinedResetTrigger
+VP_TIM3_VS_OPM.Mode=OPM_bit
+VP_TIM3_VS_OPM.Signal=TIM3_VS_OPM
+VP_TIM8_VS_ClockSourceINT.Mode=Internal
+VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
+VP_TIM8_VS_OPM.Mode=OPM_bit
+VP_TIM8_VS_OPM.Signal=TIM8_VS_OPM
+VP_TIM8_VS_no_output1.Mode=PWM Generation1 No Output
+VP_TIM8_VS_no_output1.Signal=TIM8_VS_no_output1
 board=custom
