cubemx: setup timers 1 and 2

--- a/sonar_nucleo.ioc
+++ b/sonar_nucleo.ioc
@@ -54,7 +54,9 @@ Mcu.CPN=STM32G474RET6
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=TIM8
+Mcu.IP10=TIM2
+Mcu.IP11=TIM3
+Mcu.IP12=TIM8
 Mcu.IP2=DAC3
 Mcu.IP3=DMA
 Mcu.IP4=LPUART1
@@ -62,8 +64,8 @@ Mcu.IP5=NVIC
 Mcu.IP6=OPAMP6
 Mcu.IP7=RCC
 Mcu.IP8=SYS
-Mcu.IP9=TIM3
-Mcu.IPNb=11
+Mcu.IP9=TIM1
+Mcu.IPNb=13
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
@@ -71,31 +73,40 @@ Mcu.Pin1=PC1
 Mcu.Pin10=PB11
 Mcu.Pin11=PC8
 Mcu.Pin12=PC9
-Mcu.Pin13=PA13
-Mcu.Pin14=PA14
-Mcu.Pin15=PC10
-Mcu.Pin16=PC11
-Mcu.Pin17=PB6
-Mcu.Pin18=VP_DAC3_VS_DACI1
-Mcu.Pin19=VP_SYS_V_VREFBUF
+Mcu.Pin13=PA8
+Mcu.Pin14=PA13
+Mcu.Pin15=PA14
+Mcu.Pin16=PA15
+Mcu.Pin17=PC10
+Mcu.Pin18=PC11
+Mcu.Pin19=PB6
 Mcu.Pin2=PC2
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_SYS_VS_DBSignals
-Mcu.Pin22=VP_TIM3_VS_ControllerModeCombinedResetTrigger
-Mcu.Pin23=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin24=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin25=VP_TIM3_VS_OPM
-Mcu.Pin26=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin27=VP_TIM8_VS_no_output1
-Mcu.Pin28=VP_TIM8_VS_OPM
+Mcu.Pin20=VP_DAC3_VS_DACI1
+Mcu.Pin21=VP_SYS_V_VREFBUF
+Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin23=VP_SYS_VS_DBSignals
+Mcu.Pin24=VP_TIM1_VS_ControllerModeCombinedResetTrigger
+Mcu.Pin25=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin26=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin27=VP_TIM2_VS_ControllerModeClock
+Mcu.Pin28=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin29=VP_TIM3_VS_ControllerModeCombinedResetTrigger
 Mcu.Pin3=PA0
+Mcu.Pin30=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin31=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin32=VP_TIM3_VS_OPM
+Mcu.Pin33=VP_TIM8_VS_ControllerModeCombinedResetTrigger
+Mcu.Pin34=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin35=VP_TIM8_VS_ClockSourceITR
+Mcu.Pin36=VP_TIM8_VS_no_output1
+Mcu.Pin37=VP_TIM8_VS_OPM
 Mcu.Pin4=PA1
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PC5
-Mcu.PinsNb=29
+Mcu.PinsNb=38
 Mcu.ThirdParty0=QuantumLeaps.qpc.7.3.4
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -127,6 +138,7 @@ PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
+PA15.Signal=S_TIM2_CH1
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=LPUART1_TX
@@ -141,6 +153,7 @@ PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=XDCR_PWR_SENSE
 PA6.Mode=IN3-Single-Ended
 PA6.Signal=ADC2_IN3
+PA8.Signal=S_TIM1_CH1
 PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=XRDC_RX_AMP
 PB11.Mode=PGA Connected-DAC_OUT2-INP
@@ -212,7 +225,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_ADC2_Init-ADC2-false-HAL-true,7-MX_DAC3_Init-DAC3-false-HAL-true,8-MX_OPAMP6_Init-OPAMP6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_ADC2_Init-ADC2-false-HAL-true,7-MX_DAC3_Init-DAC3-false-HAL-true,8-MX_OPAMP6_Init-OPAMP6-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true
 QuantumLeaps.qpc.7.3.4.RTEFJjqpc_Checked=false
 QuantumLeaps.qpc.7.3.4_SwParameter=qpcCcRTEFJjRealAaTimeOoKernel\:qk;qpcCcRTEFJjEventOoProcessor\:qep;qpcCcRTEFJjFramework\:qf;
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
@@ -266,10 +279,23 @@ RCC.USART3Freq_Value=168000000
 RCC.USBFreq_Value=168000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOOutputFreq_Value=336000000
+SH.S_TIM1_CH1.0=TIM1_CH1,PWM Generation1 CH1
+SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
+SH.S_TIM2_CH1.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
 SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
 SH.S_TIM8_CH4.ConfNb=1
+TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM1.IPParameters=PeriodNoDither,Channel-PWM Generation1 CH1,TIM_MasterOutputTrigger,PulseNoDither_1
+TIM1.PeriodNoDither=44
+TIM1.PulseNoDither_1=22
+TIM1.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
+TIM2.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM2.IPParameters=Channel-PWM Generation1 CH1,TIM_MasterOutputTrigger,PulseNoDither_1
+TIM2.PulseNoDither_1=500
+TIM2.TIM_MasterOutputTrigger=TIM_TRGO_OC1REF
 TIM3.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
 TIM3.IPParameters=Channel-PWM Generation3 CH3,Prescaler,PeriodNoDither,OCMode_PWM-PWM Generation3 CH3,PulseNoDither_3
 TIM3.OCMode_PWM-PWM\ Generation3\ CH3=TIM_OCMODE_PWM2
@@ -295,6 +321,16 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_SYS_V_VREFBUF.Mode=ExternalMode
 VP_SYS_V_VREFBUF.Signal=SYS_V_VREFBUF
+VP_TIM1_VS_ClockSourceINT.Mode=Internal
+VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
+VP_TIM1_VS_ClockSourceITR.Mode=TriggerSource_ITR1
+VP_TIM1_VS_ClockSourceITR.Signal=TIM1_VS_ClockSourceITR
+VP_TIM1_VS_ControllerModeCombinedResetTrigger.Mode=Combined_gated_reset_Mode
+VP_TIM1_VS_ControllerModeCombinedResetTrigger.Signal=TIM1_VS_ControllerModeCombinedResetTrigger
+VP_TIM2_VS_ClockSourceITR.Mode=TriggerSource_ITR0
+VP_TIM2_VS_ClockSourceITR.Signal=TIM2_VS_ClockSourceITR
+VP_TIM2_VS_ControllerModeClock.Mode=Clock Mode
+VP_TIM2_VS_ControllerModeClock.Signal=TIM2_VS_ControllerModeClock
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
 VP_TIM3_VS_ClockSourceITR.Mode=TriggerSource_ITR5
@@ -305,6 +341,10 @@ VP_TIM3_VS_OPM.Mode=OPM_bit
 VP_TIM3_VS_OPM.Signal=TIM3_VS_OPM
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
+VP_TIM8_VS_ClockSourceITR.Mode=TriggerSource_ITR1
+VP_TIM8_VS_ClockSourceITR.Signal=TIM8_VS_ClockSourceITR
+VP_TIM8_VS_ControllerModeCombinedResetTrigger.Mode=Combined_Reset_Trigger_Mode
+VP_TIM8_VS_ControllerModeCombinedResetTrigger.Signal=TIM8_VS_ControllerModeCombinedResetTrigger
 VP_TIM8_VS_OPM.Mode=OPM_bit
 VP_TIM8_VS_OPM.Signal=TIM8_VS_OPM
 VP_TIM8_VS_no_output1.Mode=PWM Generation1 No Output
