--- a/sonar_nucleo.ioc
+++ b/sonar_nucleo.ioc
@@ -56,7 +56,8 @@ Mcu.IP0=ADC1
 Mcu.IP1=ADC2
 Mcu.IP10=TIM2
 Mcu.IP11=TIM3
-Mcu.IP12=TIM8
+Mcu.IP12=TIM4
+Mcu.IP13=TIM8
 Mcu.IP2=DAC3
 Mcu.IP3=DMA
 Mcu.IP4=LPUART1
@@ -65,7 +66,7 @@ Mcu.IP6=OPAMP6
 Mcu.IP7=RCC
 Mcu.IP8=SYS
 Mcu.IP9=TIM1
-Mcu.IPNb=13
+Mcu.IPNb=14
 Mcu.Name=STM32G474R(B-C-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC0
@@ -74,39 +75,45 @@ Mcu.Pin10=PB11
 Mcu.Pin11=PC8
 Mcu.Pin12=PC9
 Mcu.Pin13=PA8
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PA15
-Mcu.Pin17=PC10
-Mcu.Pin18=PC11
-Mcu.Pin19=PB6
+Mcu.Pin14=PA11
+Mcu.Pin15=PA13
+Mcu.Pin16=PA14
+Mcu.Pin17=PA15
+Mcu.Pin18=PC10
+Mcu.Pin19=PC11
 Mcu.Pin2=PC2
-Mcu.Pin20=VP_DAC3_VS_DACI1
-Mcu.Pin21=VP_SYS_V_VREFBUF
-Mcu.Pin22=VP_SYS_VS_Systick
-Mcu.Pin23=VP_SYS_VS_DBSignals
-Mcu.Pin24=VP_TIM1_VS_ControllerModeCombinedResetTrigger
-Mcu.Pin25=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin26=VP_TIM1_VS_ClockSourceITR
-Mcu.Pin27=VP_TIM2_VS_ControllerModeClock
-Mcu.Pin28=VP_TIM2_VS_ClockSourceITR
-Mcu.Pin29=VP_TIM3_VS_ControllerModeCombinedResetTrigger
+Mcu.Pin20=PB6
+Mcu.Pin21=PB7
+Mcu.Pin22=VP_DAC3_VS_DACI1
+Mcu.Pin23=VP_SYS_V_VREFBUF
+Mcu.Pin24=VP_SYS_VS_Systick
+Mcu.Pin25=VP_SYS_VS_DBSignals
+Mcu.Pin26=VP_TIM1_VS_ControllerModeCombinedResetTrigger
+Mcu.Pin27=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin28=VP_TIM1_VS_ClockSourceITR
+Mcu.Pin29=VP_TIM2_VS_ControllerModeClock
 Mcu.Pin3=PA0
-Mcu.Pin30=VP_TIM3_VS_ClockSourceINT
-Mcu.Pin31=VP_TIM3_VS_ClockSourceITR
-Mcu.Pin32=VP_TIM3_VS_OPM
-Mcu.Pin33=VP_TIM8_VS_ControllerModeCombinedResetTrigger
-Mcu.Pin34=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin35=VP_TIM8_VS_ClockSourceITR
-Mcu.Pin36=VP_TIM8_VS_no_output1
-Mcu.Pin37=VP_TIM8_VS_OPM
+Mcu.Pin30=VP_TIM2_VS_ClockSourceITR
+Mcu.Pin31=VP_TIM3_VS_ControllerModeCombinedResetTrigger
+Mcu.Pin32=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin33=VP_TIM3_VS_ClockSourceITR
+Mcu.Pin34=VP_TIM3_VS_OPM
+Mcu.Pin35=VP_TIM4_VS_ControllerModeCombinedResetTrigger
+Mcu.Pin36=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin37=VP_TIM4_VS_ClockSourceITR
+Mcu.Pin38=VP_TIM4_VS_OPM
+Mcu.Pin39=VP_TIM8_VS_ControllerModeCombinedResetTrigger
 Mcu.Pin4=PA1
+Mcu.Pin40=VP_TIM8_VS_ClockSourceINT
+Mcu.Pin41=VP_TIM8_VS_ClockSourceITR
+Mcu.Pin42=VP_TIM8_VS_no_output1
+Mcu.Pin43=VP_TIM8_VS_OPM
 Mcu.Pin5=PA2
 Mcu.Pin6=PA3
 Mcu.Pin7=PA5
 Mcu.Pin8=PA6
 Mcu.Pin9=PC5
-Mcu.PinsNb=38
+Mcu.PinsNb=44
 Mcu.ThirdParty0=QuantumLeaps.qpc.7.3.4
 Mcu.ThirdPartyNb=1
 Mcu.UserConstants=
@@ -125,6 +132,7 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:false\:true\:false
+NVIC.TIM2_IRQn=true\:4\:0\:true\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 PA0.GPIOParameters=GPIO_Label
 PA0.GPIO_Label=XDCR_RX
@@ -134,6 +142,9 @@ PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=XDCR_RX_AC
 PA1.Mode=PGA Connected-DAC_OUT2-INP
 PA1.Signal=OPAMP6_VINM0
+PA11.GPIOParameters=GPIO_Label
+PA11.GPIO_Label=XDCR_SHORT
+PA11.Signal=S_TIM4_CH1
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -162,6 +173,10 @@ PB6.GPIOParameters=GPIO_Label
 PB6.GPIO_Label=DEBUG_GPIO
 PB6.Locked=true
 PB6.Signal=GPIO_Output
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=nXDCR_DECOUPLE
+PB7.Locked=true
+PB7.Signal=S_TIM4_CH2
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=GainSel0
 PC0.Locked=true
@@ -225,7 +240,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_ADC2_Init-ADC2-false-HAL-true,7-MX_DAC3_Init-DAC3-false-HAL-true,8-MX_OPAMP6_Init-OPAMP6-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_ADC2_Init-ADC2-false-HAL-true,7-MX_DAC3_Init-DAC3-false-HAL-true,8-MX_OPAMP6_Init-OPAMP6-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true,10-MX_TIM8_Init-TIM8-false-HAL-true,11-MX_TIM1_Init-TIM1-false-HAL-true,12-MX_TIM2_Init-TIM2-false-HAL-true
 QuantumLeaps.qpc.7.3.4.RTEFJjqpc_Checked=false
 QuantumLeaps.qpc.7.3.4_SwParameter=qpcCcRTEFJjRealAaTimeOoKernel\:qk;qpcCcRTEFJjEventOoProcessor\:qep;qpcCcRTEFJjFramework\:qf;
 RCC.ADC12CLockSelection=RCC_ADC12CLKSOURCE_PLL
@@ -285,6 +300,10 @@ SH.S_TIM2_CH1.0=TIM2_CH1,PWM Generation1 CH1
 SH.S_TIM2_CH1.ConfNb=1
 SH.S_TIM3_CH3.0=TIM3_CH3,PWM Generation3 CH3
 SH.S_TIM3_CH3.ConfNb=1
+SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
+SH.S_TIM4_CH1.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,Output Compare2 CH2
+SH.S_TIM4_CH2.ConfNb=1
 SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
 SH.S_TIM8_CH4.ConfNb=1
 TIM1.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
@@ -302,6 +321,14 @@ TIM3.OCMode_PWM-PWM\ Generation3\ CH3=TIM_OCMODE_PWM2
 TIM3.PeriodNoDither=19
 TIM3.Prescaler=108
 TIM3.PulseNoDither_3=11
+TIM4.Channel-Output\ Compare2\ CH2=TIM_CHANNEL_2
+TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM4.IPParameters=Prescaler,PeriodNoDither,Channel-Output Compare2 CH2,OCMode_2,Channel-PWM Generation1 CH1,OCMode_PWM-PWM Generation1 CH1,PulseNoDither_1
+TIM4.OCMode_2=TIM_OCMODE_RETRIGERRABLE_OPM2
+TIM4.OCMode_PWM-PWM\ Generation1\ CH1=TIM_OCMODE_PWM2
+TIM4.PeriodNoDither=39
+TIM4.Prescaler=108
+TIM4.PulseNoDither_1=30
 TIM8.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
 TIM8.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM8.IPParameters=Prescaler,RepetitionCounter,Channel-PWM Generation4 CH4,PulseNoDither_4,OCMode_PWM-PWM Generation4 CH4,Channel-PWM Generation1 No Output,OCMode_PWM-PWM Generation1 No Output,PulseNoDither_1,TIM_MasterOutputTrigger,PeriodNoDither
@@ -339,6 +366,14 @@ VP_TIM3_VS_ControllerModeCombinedResetTrigger.Mode=Combined_Reset_Trigger_Mode
 VP_TIM3_VS_ControllerModeCombinedResetTrigger.Signal=TIM3_VS_ControllerModeCombinedResetTrigger
 VP_TIM3_VS_OPM.Mode=OPM_bit
 VP_TIM3_VS_OPM.Signal=TIM3_VS_OPM
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceITR.Mode=TriggerSource_ITR5
+VP_TIM4_VS_ClockSourceITR.Signal=TIM4_VS_ClockSourceITR
+VP_TIM4_VS_ControllerModeCombinedResetTrigger.Mode=Combined_Reset_Trigger_Mode
+VP_TIM4_VS_ControllerModeCombinedResetTrigger.Signal=TIM4_VS_ControllerModeCombinedResetTrigger
+VP_TIM4_VS_OPM.Mode=OPM_bit
+VP_TIM4_VS_OPM.Signal=TIM4_VS_OPM
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceITR.Mode=TriggerSource_ITR1
